Bug 153429 - konqueror crashes when parsing corrupted bookmarks.xml file
Summary: konqueror crashes when parsing corrupted bookmarks.xml file
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
: 153436 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-12-04 17:26 UTC by Oliver Putz
Modified: 2007-12-06 20:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Putz 2007-12-04 17:26:11 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

If you give konqueror a corrupted (empty for that matter) bookmarks.xml file, it crashes as soon as you work with the bookmarks menu.

Steps to reproduce

1) Delete bookmarks.* in /home/kde4daily/.kde4/share/apps/konqueror
2) Create new empy bookmarks.xml file (touch bookmarks.xml)
3) Start konqueror and klick on "Bookmarks" or try to add a link to the bookmarks.

Konqueror apparently tries to use the wrong bookmarks.xml file and crashes with the following bug report: http://pastebin.ca/805710

I use kde4daily r744670 with a VirtualBox on Gentoo
Comment 1 Maksim Orlovich 2007-12-04 17:35:14 UTC
Please include all backtraces here, do not use external services, which are not guaranteed to be archived. (I guess I should go fix the bogus wiki entries)

#10 0xb71c6031 in qFatal ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtCore.so.4
#11 0xb71c619d in qt_assert ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtCore.so.4
#12 0xb7cd9750 in KBookmark::toGroup (this=0xbff8f248)
    at /storage/tmp/kde4dev/kdelibs/kio/bookmarks/kbookmark.cc:338
#13 0xb7ce56de in KBookmarkMenu::fillBookmarks (this=0x810ed70)
    at /storage/tmp/kde4dev/kdelibs/kio/bookmarks/kbookmarkmenu.cc:509
#14 0xb7ceab02 in KonqBookmarkMenu::refill (this=0x810ed70)
    at /storage/tmp/kde4dev/kdelibs/kio/bookmarks/konqbookmarkmenu.cc:150
#15 0xb7ce77ee in KBookmarkMenu::slotAboutToShow (this=0x810ed70)
    at /storage/tmp/kde4dev/kdelibs/kio/bookmarks/kbookmarkmenu.cc:138
#16 0xb7ce7891 in KBookmarkMenu::qt_metacall (this=0x810ed70, 
    _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbff8f31c)
    at /storage/tmp/kde4dev/kdelibs-build/kio/kbookmarkmenu.moc:75
#17 0xb7ce9d04 in KonqBookmarkMenu::qt_metacall (this=0x810ed70, 
    _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0xbff8f31c)
    at /storage/tmp/kde4dev/kdelibs-build/kio/konqbookmarkmenu.moc:56
#18 0xb7295af8 in QMetaObject::activate ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtCore.so.4
#19 0xb7295f6d in QMetaObject::activate ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtCore.so.4
#20 0xb6e3e6ef in QMenu::aboutToShow ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#21 0xb6e43490 in QMenu::popup ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#22 0xb6e5052b in QMenuBarPrivate::popupAction ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#23 0xb6e5078b in QMenuBarPrivate::setCurrentAction ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#24 0xb6e52e8e in QMenuBar::mouseMoveEvent ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#25 0xb6ab494d in QWidget::event ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#26 0xb6e52d5d in QMenuBar::event ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#27 0xb6a62f51 in QApplicationPrivate::notify_helper ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#28 0xb6a63ac2 in QApplication::notify ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#29 0xb781662f in KApplication::notify (this=0xbff9106c, receiver=0x82556a0, 
    event=0xbff90090)
    at /storage/tmp/kde4dev/kdelibs/kdeui/kernel/kapplication.cpp:319
#30 0xb7284356 in QCoreApplication::notifyInternal ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtCore.so.4
#31 0xb6a5fc83 in QCoreApplication::sendEvent ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#32 0xb6e49523 in QMenuPrivate::mouseEventTaken ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#33 0xb6e495b2 in QMenu::mouseMoveEvent ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#34 0xb6ab494d in QWidget::event ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#35 0xb6e4507f in QMenu::event ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#36 0xb6a62f51 in QApplicationPrivate::notify_helper ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#37 0xb6a63ac2 in QApplication::notify ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#38 0xb781662f in KApplication::notify (this=0xbff9106c, receiver=0x833e2c0, 
    event=0xbff907ec)
    at /storage/tmp/kde4dev/kdelibs/kdeui/kernel/kapplication.cpp:319
#39 0xb7284356 in QCoreApplication::notifyInternal ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtCore.so.4
#40 0xb6a6e321 in QCoreApplication::sendSpontaneousEvent ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#41 0xb6acf6dd in QETWidget::translateMouseEvent ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#42 0xb6acd480 in QApplication::x11ProcessEvent ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#43 0xb6afb047 in x11EventSourceDispatch ()
   from /storage/tmp/kde4dev/qt-unstable/lib/libQtGui.so.4
#44 0xb6538df2 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#45 0xb653bdcf in ?? () from /usr/lib/libglib-2.0.so.0
#46 0x08060298 in ?? ()
#47 0x00000000 in ?? ()
#0  0xffffe402 in __kernel_vsyscall ()
Comment 2 Pino Toscano 2007-12-04 19:52:37 UTC
*** Bug 153436 has been marked as a duplicate of this bug. ***
Comment 3 Pino Toscano 2007-12-04 19:54:19 UTC
It'd seem that KBookmarkmanager does not create a domelement even for invalid/empty documents?
CC'ing Daniel.
Comment 4 Tobias Koenig 2007-12-06 20:42:10 UTC
SVN commit 745671 by tokoe:

Fix a crash by adding a default 'xbel' element to the DOM
of an invalid bookmark file.

BUG:153429


 M  +28 -25    kbookmarkmanager.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=745671