Fix a crash by adding a default 'xbel' element to the DOM of an invalid bookmark file.

BUG:153429

svn path=/trunk/KDE/kdelibs/; revision=745671